Changes in About section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </p>
       <p>
         I graduated with a degree in Mechanical engineering from SRM University
-        and have 3+ of experience working in Customer Service and Sales
+        and have over 2 years of experience working in Full Stack Developmet
       </p>
       <p>
         I have strong proficiency in
@@ -51,11 +51,7 @@
         <strong>Mern Stack</strong>. I also possess strong
         <strong> communication skills</strong>
       </p>
-      <p>
-        Despite starting my career in non IT field, I have gained enough
-        knowledge and experience over the last year and a half by working on
-        several personal projects.
-      </p>
+
       <div class="tabs">
         <div class="tab-titles">
           <span class="tab-link active-link" id="education">Education</span>
@@ -100,8 +96,8 @@
               Services - Associate
             </li>
             <li>
-              <span>June 2022 - Present</span><br />Concentrix - Technical
-              Support
+              <span>June 2022 - Present</span><br />Concentrix - Mern Stack
+              Developer
             </li>
           </ul>
         </div>
